--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
 
     <header>
-      <div class="logo">
+      <div class="desktop logo">
         <img src="./resources/images/ic-logo.svg" alt="Logo Colmar Academy">
         <div class="colmar">
           <span>COLMAR</span>
@@ -20,13 +20,19 @@
           <span>ACADEMY</span>
         </div>
       </div>
-      <nav>
+      <nav class="desktop">
         <ul>
           <li>On campus</li>
           <li>Online</li>
           <li>For companies</li>
           <li>Sign in</li>
         </ul>
+      </nav>
+      <nav class="mobile">
+        <img src="./resources/images/ic-logo.svg" alt="">
+        <img src="./resources/images/ic-on-campus.svg" alt="">
+        <img src="./resources/images/ic-online.svg" alt="">
+        <img src="./resources/images/ic-login.svg" alt="">
       </nav>
     </header>
 
@@ -45,34 +51,37 @@
 
     <div class="information">
       <div class="feature">
-        <img src="./resources/images/information-main.jpg" alt="">
+        <img class="desktop" src="./resources/images/information-main.jpg" alt="">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         <p>Emanuel, Sr Strategical at Hiring.com</p>
       </div>
       <div class="items">
         <div class="item">
-          <img src="./resources/images/information-orientation.jpg" alt="">
+          <img class="desktop" src="./resources/images/information-orientation.jpg" alt="">
+          <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="">
           <div class="text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <a href="#">Read more</a>
+            <a class="desktop" href="#">Read more</a>
           </div>
         </div>
         <div class="item">
-          <img src="./resources/images/information-campus.jpg" alt="">
+          <img class="desktop" src="./resources/images/information-campus.jpg" alt="">
+          <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="">
           <div class="text">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
-            <a href="#">Read more</a>
+            <a class="desktop" href="#">Read more</a>
           </div>
         </div>
         <div class="item">
-          <img src="./resources/images/information-guest-lecture.jpg" alt="">
+          <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="">
+          <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="">
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <a href="#">Read more</a>
+            <a class="desktop" href="#">Read more</a>
           </div>
         </div>
       </div>
@@ -83,40 +92,52 @@
     <div class="courses">
       <h2>Start learning</h2>
       <div class="course">
-        <img src="./resources/images/course-software.jpg" alt="">
+        <img class="desktop" src="./resources/images/course-software.jpg" alt="">
         <h3>Software engineering</h3>
-        <h4>COURSES</h4>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
+        <div class="desktop content">
+          <h4>COURSES</h4>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
       </div>
       <div class="course">
-        <img src="./resources/images/course-computer-art.jpg" alt="">
+        <img class="desktop" src="./resources/images/course-computer-art.jpg" alt="">
         <h3>Computer art</h3>
-        <h4>COURSES</h4>
-        <p>Imagining & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        <div class="desktop content">
+          <h4>COURSES</h4>
+          <p>Imagining & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
       </div>
       <div class="course">
-        <img src="./resources/images/course-design.jpg" alt="">
+        <img class="desktop" src="./resources/images/course-design.jpg" alt="">
         <h3>Design</h3>
-        <h4>COURSES</h4>
-        <p>User Experience Design, User Research, Visual Design</p>
+        <div class="desktop content">
+          <h4>COURSES</h4>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
       </div>
       <div class="course">
-        <img src="./resources/images/course-data.jpg" alt="">
+        <img class="desktop" src="./resources/images/course-data.jpg" alt="">
         <h3>Data</h3>
-        <h4>COURSES</h4>
-        <p>Data Science, Big Data, SQL, Data Viualization</p>
+        <div class="desktop content">
+          <h4>COURSES</h4>
+          <p>Data Science, Big Data, SQL, Data Viualization</p>
+        </div>
       </div>
       <div class="course">
-        <img src="./resources/images/course-business.jpg" alt="">
+        <img class="desktop" src="./resources/images/course-business.jpg" alt="">
         <h3>Business</h3>
-        <h4>COURSES</h4>
-        <p>Product Development, Business Development, Startup</p>
+        <div class="desktop content">
+          <h4>COURSES</h4>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
       </div>
       <div class="course">
-        <img src="./resources/images/course-marketing.jpg" alt="">
+        <img class="desktop" src="./resources/images/course-marketing.jpg" alt="">
         <h3>Marketing</h3>
-        <h4>COURSES</h4>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
+        <div class="desktop content">
+          <h4>COURSES</h4>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
       </div>
     </div>
 
@@ -128,10 +149,12 @@
         <video src="./resources/videos/thesis.mp4" autoplay poster="posterimage.jpg">
           Video thesis Reimagine urban
         </video>
-        <h3>Reimagine urban</h3>
-        <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p
+        <div class="desktop">
+          <h3>Reimagine urban</h3>
+          <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
       </div>
-      <div class="items">
+      <div class="items desktop">
         <div class="item">
           <img src="./resources/images/thesis-fisma.jpg" alt="">
           <div class="text">
@@ -155,7 +178,7 @@
       <div class="copy">
         <span>&copy; 2018 Colmar Academy. All rights reserved</span>
       </div>
-      <nav>
+      <nav class="desktop">
         <ul>
           <li>Terms</li>
           <li>Privacy</li>
