--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- header -->
 
-    <header>
+    <header class="container">
       <div class="desktop logo">
         <img src="./resources/images/ic-logo.svg" alt="Logo Colmar Academy">
         <div class="colmar">
@@ -38,18 +38,22 @@
 
     <!-- banner -->
 
-    <div class="banner">
-      <img src="./resources/images/banner.jpg" alt="Students at campus">
-      <h1>Learn something new everyday</h1>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-      <div class="btn">
-        <span>Start here</span>
+    <div class="banner container">
+      <div class="feature">
+        <img src="./resources/images/banner.jpg" alt="Students at campus">
+      </div>
+      <div class="content">
+        <h1>Learn something new everyday</h1>
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+        <div class="btn">
+          <span>Start here</span>
+        </div>
       </div>
     </div>
 
     <!-- information section -->
 
-    <div class="information">
+    <div class="information container">
       <div class="feature">
         <img class="desktop" src="./resources/images/information-main.jpg" alt="">
         <h2>It doesn't hurt to keep practicing</h2>
@@ -66,7 +70,7 @@
             <a class="desktop" href="#">Read more</a>
           </div>
         </div>
-        <div class="item">
+        <div class="item first">
           <img class="desktop" src="./resources/images/information-campus.jpg" alt="">
           <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="">
           <div class="text">
@@ -89,84 +93,88 @@
 
     <!-- courses section -->
 
-    <div class="courses">
+    <div class="curriculum overview">
       <h2>Start learning</h2>
-      <div class="course">
-        <img class="desktop" src="./resources/images/course-software.jpg" alt="">
-        <h3>Software engineering</h3>
-        <div class="desktop content">
-          <h4>COURSES</h4>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
+      <div class="courses container">
+        <div class="course">
+          <img class="desktop" src="./resources/images/course-software.jpg" alt="">
+          <h3>Software engineering</h3>
+          <div class="desktop content">
+            <h4>COURSES</h4>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
         </div>
-      </div>
-      <div class="course">
-        <img class="desktop" src="./resources/images/course-computer-art.jpg" alt="">
-        <h3>Computer art</h3>
-        <div class="desktop content">
-          <h4>COURSES</h4>
-          <p>Imagining & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        <div class="course">
+          <img class="desktop" src="./resources/images/course-computer-art.jpg" alt="">
+          <h3>Computer art</h3>
+          <div class="desktop content">
+            <h4>COURSES</h4>
+            <p>Imagining & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
         </div>
-      </div>
-      <div class="course">
-        <img class="desktop" src="./resources/images/course-design.jpg" alt="">
-        <h3>Design</h3>
-        <div class="desktop content">
-          <h4>COURSES</h4>
-          <p>User Experience Design, User Research, Visual Design</p>
+        <div class="course">
+          <img class="desktop" src="./resources/images/course-design.jpg" alt="">
+          <h3>Design</h3>
+          <div class="desktop content">
+            <h4>COURSES</h4>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
         </div>
-      </div>
-      <div class="course">
-        <img class="desktop" src="./resources/images/course-data.jpg" alt="">
-        <h3>Data</h3>
-        <div class="desktop content">
-          <h4>COURSES</h4>
-          <p>Data Science, Big Data, SQL, Data Viualization</p>
+          <div class="course">
+            <img class="desktop" src="./resources/images/course-data.jpg" alt="">
+            <h3>Data</h3>
+            <div class="desktop content">
+              <h4>COURSES</h4>
+              <p>Data Science, Big Data, SQL, Data Viualization</p>
+            </div>
+          </div>
+          <div class="course">
+            <img class="desktop" src="./resources/images/course-business.jpg" alt="">
+            <h3>Business</h3>
+            <div class="desktop content">
+              <h4>COURSES</h4>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="course">
+            <img class="desktop" src="./resources/images/course-marketing.jpg" alt="">
+            <h3>Marketing</h3>
+            <div class="desktop content">
+              <h4>COURSES</h4>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="course">
-        <img class="desktop" src="./resources/images/course-business.jpg" alt="">
-        <h3>Business</h3>
-        <div class="desktop content">
-          <h4>COURSES</h4>
-          <p>Product Development, Business Development, Startup</p>
-        </div>
-      </div>
-      <div class="course">
-        <img class="desktop" src="./resources/images/course-marketing.jpg" alt="">
-        <h3>Marketing</h3>
-        <div class="desktop content">
-          <h4>COURSES</h4>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
-        </div>
-      </div>
     </div>
 
     <!-- thesis exhibit section -->
 
-    <div class="thesis">
+    <div class="thesis overview">
       <h2>Thesis exhibit</h2>
-      <div class="feature">
-        <video src="./resources/videos/thesis.mp4" autoplay poster="posterimage.jpg">
-          Video thesis Reimagine urban
-        </video>
-        <div class="desktop">
-          <h3>Reimagine urban</h3>
-          <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-        </div>
-      </div>
-      <div class="items desktop">
-        <div class="item">
-          <img src="./resources/images/thesis-fisma.jpg" alt="">
-          <div class="text">
-            <h3>Fisma: Design and Prototype</h3>
-            <p>Designer showcase of new prototype product</p>
+      <div class="thesis container">
+        <div class="feature">
+          <video src="./resources/videos/thesis.mp4" autoplay poster="posterimage.jpg">
+            Video thesis Reimagine urban
+          </video>
+          <div class="desktop">
+            <h3>Reimagine urban</h3>
+            <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
           </div>
         </div>
-        <div class="item">
-          <img src="./resources/images/thesis-now-and-then.jpg" alt="">
-          <div class="text">
-            <h3>Now and then</h3>
-            <p>Research study about New York</p>
+        <div class="items desktop">
+          <div class="item first">
+            <img src="./resources/images/thesis-fisma.jpg" alt="">
+            <div class="text">
+              <h3>Fisma: Design and Prototype</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./resources/images/thesis-now-and-then.jpg" alt="">
+            <div class="text">
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
+            </div>
           </div>
         </div>
       </div>
@@ -174,7 +182,7 @@
 
     <!-- footer -->
 
-    <footer>
+    <footer class="container">
       <div class="copy">
         <span>&copy; 2018 Colmar Academy. All rights reserved</span>
       </div>
