--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
@@ -96,7 +97,7 @@
     <div class="curriculum overview">
       <h2>Start learning</h2>
       <div class="courses container">
-        <div class="course">
+        <div class="course container">
           <img class="desktop" src="./resources/images/course-software.jpg" alt="">
           <h3>Software engineering</h3>
           <div class="desktop content">
@@ -104,7 +105,7 @@
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
-        <div class="course">
+        <div class="course container">
           <img class="desktop" src="./resources/images/course-computer-art.jpg" alt="">
           <h3>Computer art</h3>
           <div class="desktop content">
@@ -112,7 +113,7 @@
             <p>Imagining & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
           </div>
         </div>
-        <div class="course">
+        <div class="course container">
           <img class="desktop" src="./resources/images/course-design.jpg" alt="">
           <h3>Design</h3>
           <div class="desktop content">
@@ -120,7 +121,7 @@
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
         </div>
-          <div class="course">
+          <div class="course container">
             <img class="desktop" src="./resources/images/course-data.jpg" alt="">
             <h3>Data</h3>
             <div class="desktop content">
@@ -128,7 +129,7 @@
               <p>Data Science, Big Data, SQL, Data Viualization</p>
             </div>
           </div>
-          <div class="course">
+          <div class="course container">
             <img class="desktop" src="./resources/images/course-business.jpg" alt="">
             <h3>Business</h3>
             <div class="desktop content">
@@ -136,7 +137,7 @@
               <p>Product Development, Business Development, Startup</p>
             </div>
           </div>
-          <div class="course">
+          <div class="course container">
             <img class="desktop" src="./resources/images/course-marketing.jpg" alt="">
             <h3>Marketing</h3>
             <div class="desktop content">
