--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Palanquin+Dark|Raleway|Vollkorn:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
@@ -45,7 +46,7 @@
       </div>
       <div class="content">
         <h1>Learn something new everyday</h1>
-        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="btn">
           <span>Start here</span>
         </div>
@@ -59,10 +60,10 @@
         <img class="desktop" src="./resources/images/information-main.jpg" alt="">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-        <p>Emanuel, Sr Strategical at Hiring.com</p>
+        <p class="name">Emanuel, Sr Strategical at Hiring.com</p>
       </div>
       <div class="items">
-        <div class="item">
+        <div class="item first">
           <img class="desktop" src="./resources/images/information-orientation.jpg" alt="">
           <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="">
           <div class="text">
@@ -71,7 +72,7 @@
             <a class="desktop" href="#">Read more</a>
           </div>
         </div>
-        <div class="item first">
+        <div class="item">
           <img class="desktop" src="./resources/images/information-campus.jpg" alt="">
           <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="">
           <div class="text">
