--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- information section -->
 
     <div class="information container">
-      <div class="feature">
-        <img class="desktop" src="./resources/images/information-main.jpg" alt="">
+      <div class="desktop feature">
+        <img src="./resources/images/information-main.jpg" alt="">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitu vitae libero in ipsum porttito consequat. Aleguam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         <p class="name">Emanuel, Sr Strategical at Hiring.com</p>
@@ -69,7 +69,7 @@
           <div class="text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <a class="desktop" href="#">Read more</a>
+            <a href="#">Read more</a>
           </div>
         </div>
         <div class="item">
@@ -78,7 +78,7 @@
           <div class="text">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
-            <a class="desktop" href="#">Read more</a>
+            <a href="#">Read more</a>
           </div>
         </div>
         <div class="item">
@@ -87,7 +87,7 @@
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <a class="desktop" href="#">Read more</a>
+            <a href="#">Read more</a>
           </div>
         </div>
       </div>
